# VietNewTSS-private

./: .dockerignore  .gitignore  Dockerfile  HANDOFF_VIBE_PROJECT.md  README.md  config.yaml  nhioa.srt  pyproject.toml
.gradio/flagged/: dataset1.csv
apps/: __init__.py  api.py  web_ui.py
assets/: voices.json
src/yourtts/: __init__.py  base.py  factory.py  smoke.py
src/yourtts/engines/: __init__.py  standard.py  vieneu_turbo.py
src/yourtts/utils/: __init__.py  audio.py  env.py  srt.py  text.py  voices.py
tests/: test_api.py  test_engine_standard.py  test_factory.py  test_utils.py
