[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yourtts"
version = "0.1.0"
description = "Personal TTS project inspired by VieNeu architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "soundfile>=0.12",
  "pyyaml>=6.0",
  "gradio>=5.0",
  "flask>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
vieneu = [
  "vieneu>=2.0.0",
]
all = [
  "pytest>=8.0",
  "vieneu>=2.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
